[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bfasta"
authors = ["Reto Stamm", "Dr B."]
description = "Dr B.s fastA reader"
readme = "README.md"
version = "0.0.2"
keywords = ["example"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage="https://github.com/retospect/bfasta"

[tool.bumpver]
current_version = "0.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/bfasta/__init__.py" = ["{version}"]

